--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
   <body>
     <h1><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">( ͡° ͜ʖ ͡°)</a></h1>
 
-    <form class="" action="mailto:2muizkhan2@gmail.com" method="post" enctype="text/plain">
+    <form class="" action="mailto:" method="post" enctype="text/plain">
       <label>Your Name</label>
       <input type="text" name="yourName" value=""><br>
       <label for="">Your Email</label>
